fixed whitespace showing on the right of the page

--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,20 @@ h2, p {
   color: #d6427b;
 }
 
+body {
+  background-color: #ffe4f6;
+}
+
 footer {
   background-color: peru;
   padding: 75px;
+  width: 100%;
 }
 
 .page_container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #ffe4f6;
 }
 
 .App {
